--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,13 @@ target_include_directories(${PROJECT_NAME} PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/includes
 )
 
+#----------- dependencies -----------
+
+if(APPLE)
+  # macOS frameworks
+  target_link_libraries(${PROJECT_NAME} PRIVATE "-framework CoreFoundation")
+endif()
+
 #----------- dev -----------
 
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror)
