--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,8 +18,10 @@ jobs:
       # 2. Install dependencies
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y doxygen graphviz texlive-latex-base texlive-latex-extra texlive-fonts-recommended
+          sudo apt-get update \
+          sudo apt-get install -y doxygen graphviz \ 
+          texlive-latex-base texlive-latex-extra \
+          texlive-fonts-recommended texlive-xetex
 
       # 3. Build Doxygen docs
       - name: Build Doxygen
