--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,8 @@ jobs:
         working-directory: .
         run: |
           doxygen docs/Doxyfile
-          make -C docs/latex
+          cd docs/latex
+          make
 
       # 4. Upload PDF as artifact
       - name: Upload PDF
