--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -63,6 +63,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 3. Setup /tmp/ Folder
+      - name: Setup /tmp/ folder
+        run: |
+          mkdir -p /tmp/docs/html /tmp/docs/latex
+          mv docs/index.html /tmp/docs/html
+
       # 1. Download all artifacts from previous matrix runs
       - name: Download docs artifacts (C++11)
         uses: actions/download-artifact@v4
